[package]
name = "terrarium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
envconfig = "0.10.0"
futures = "0.3.17"
gpio-cdev = {version = "0.5.0", features = ["async-tokio"]}
itertools = "0.10.1"
tokio = { version = "1", features = ["io-std", "net", "macros", "rt", "time"] }
